z-index fix

--- a/src/components/FabButton/fab.css
+++ b/src/components/FabButton/fab.css
@@ -5,13 +5,13 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.3);
-    z-index: 5;
+    z-index: 100;
     -webkit-transition: all 600ms cubic-bezier(0.200, 0.965, 0.000, 1.005);
     transition: all 600ms cubic-bezier(0.200, 0.965, 0.000, 1.005);
   }
   
   .fab {
-    z-index: 5;
+    z-index: 100;
     cursor: pointer;
     border-radius: 50%;
     position: fixed;
